<resources>
    <string name="app_name">Касса онлайн</string>
    <string name="title_air_ticket">Авиабилеты</string>
    <string name="title_hotel">Отели</string>
    <string name="title_in_short">Короче</string>
    <string name="title_subscription">Подписки</string>
    <string name="title_profile">Профиль</string>
    <string name="aviaTicket_office_flight_from_hint">Откуда - Москва</string>
    <string name="aviaTicket_office_flight_flight_to_hint">Куда - Турция</string>
    <string name="aviaTicket_promo_text">Музыкально отлететь</string>
    <string name="aviaTicket_slogan">Поиск дешевых\nавиабилетов</string>

    <string name="search_difficult_route_title">Сложный маршрут</string>
    <string name="search_anywhere_title">Куда угодно</string>
    <string name="search_weekend_title">Выходные</string>
    <string name="search_hot_ticket_title">Горячие билеты</string>

    <string name="search_popular_title_1">Стамбул</string>
    <string name="search_popular_title_2">Сочи</string>
    <string name="search_popular_title_3">Пхукет</string>
    <string name="search_popular_description">Популярное направление</string>
</resources>