<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/aviaTicketFragment"
        android:icon="@drawable/ic_menu_air_ticket"
        android:title="@string/title_air_ticket" />

    <item
        android:id="@+id/hotelFragment"
        android:icon="@drawable/ic_menu_hotel"
        android:title="@string/title_hotel" />

    <item
        android:id="@+id/inShortFragment"
        android:icon="@drawable/ic_menu_in_short"
        android:title="@string/title_in_short" />

    <item
        android:id="@+id/subscriptionFragment"
        android:icon="@drawable/ic_menu_subscription"
        android:title="@string/title_subscription" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_menu_profile"
        android:title="@string/title_profile" />

</menu>