<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16dp"
    tools:context=".ui.search.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_aviaTicket_office"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/avia_ticket_office_background"
        android:paddingHorizontal="@dimen/_16dp"
        android:paddingVertical="@dimen/_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_aviaTicket_office_flight_from"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_aviaTicket_office_flight_from"
                style="@style/Theme.TicketOffice.EditTextFlight"
                android:drawableStart="@drawable/ic_search_office_flight_from"
                android:drawablePadding="@dimen/_8dp"
                android:textColorHint="@color/white"
                tools:text="Минск" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider_aviaTicket_office_flight"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/aviaTicket_office_flight_divider_height"
            app:dividerColor="@color/grey6"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout_aviaTicket_office_flight_from"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout_aviaTicket_office_flight_from"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_aviaTicket_office_flight_from" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_aviaTicket_office_flight_flight_to"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout_aviaTicket_office_flight_from"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout_aviaTicket_office_flight_from"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_aviaTicket_office_flight_from">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_aviaTicket_office_flight_flight_to"
                style="@style/Theme.TicketOffice.EditTextFlight"
                android:drawableStart="@drawable/ic_search_office_flight_to"
                android:drawablePadding="@dimen/_8dp"
                android:hint="@string/aviaTicket_office_flight_flight_to_hint"
                android:textColorHint="@color/grey6" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView_search_difficult_route"
        android:layout_width="@dimen/search_menu_icon_size"
        android:layout_height="@dimen/search_menu_icon_size"
        android:layout_marginTop="@dimen/_24dp"
        android:src="@drawable/ic_search_difficult_route"
        app:layout_constraintEnd_toEndOf="@+id/textView_search_difficult_route"
        app:layout_constraintStart_toStartOf="@+id/textView_search_difficult_route"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_aviaTicket_office" />

    <TextView
        android:id="@+id/textView_search_difficult_route"
        style="@style/Theme.TicketOffice.Text3.SearchMenuText"
        android:layout_width="@dimen/search_menu_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4dp"
        android:text="@string/search_difficult_route_title"
        app:layout_constraintEnd_toStartOf="@+id/textView_search_anywhere"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_search_difficult_route" />

    <ImageView
        android:id="@+id/imageView_search_anywhere"
        android:layout_width="@dimen/search_menu_icon_size"
        android:layout_height="@dimen/search_menu_icon_size"
        android:src="@drawable/ic_search_anywhere"
        app:layout_constraintEnd_toEndOf="@+id/textView_search_anywhere"
        app:layout_constraintStart_toStartOf="@+id/textView_search_anywhere"
        app:layout_constraintTop_toTopOf="@+id/imageView_search_difficult_route" />

    <TextView
        android:id="@+id/textView_search_anywhere"
        style="@style/Theme.TicketOffice.Text3.SearchMenuText"
        android:layout_width="@dimen/search_menu_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4dp"
        android:text="@string/search_anywhere_title"
        app:layout_constraintEnd_toStartOf="@+id/textView_search_weekend"
        app:layout_constraintStart_toEndOf="@+id/textView_search_difficult_route"
        app:layout_constraintTop_toBottomOf="@+id/imageView_search_anywhere" />

    <ImageView
        android:id="@+id/imageView_search_weekend"
        android:layout_width="@dimen/search_menu_icon_size"
        android:layout_height="@dimen/search_menu_icon_size"
        android:src="@drawable/ic_search_weekend"
        app:layout_constraintEnd_toEndOf="@+id/textView_search_weekend"
        app:layout_constraintStart_toStartOf="@+id/textView_search_weekend"
        app:layout_constraintTop_toTopOf="@+id/imageView_search_difficult_route" />

    <TextView
        android:id="@+id/textView_search_weekend"
        style="@style/Theme.TicketOffice.Text3.SearchMenuText"
        android:layout_width="@dimen/search_menu_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4dp"
        android:text="@string/search_weekend_title"
        app:layout_constraintEnd_toStartOf="@+id/textView_search_hot_ticket"
        app:layout_constraintStart_toEndOf="@+id/textView_search_anywhere"
        app:layout_constraintTop_toBottomOf="@+id/imageView_search_weekend" />

    <ImageView
        android:id="@+id/imageView_search_hot_ticket"
        android:layout_width="@dimen/search_menu_icon_size"
        android:layout_height="@dimen/search_menu_icon_size"
        android:src="@drawable/ic_search_hot_ticket"
        app:layout_constraintEnd_toEndOf="@+id/textView_search_hot_ticket"
        app:layout_constraintStart_toStartOf="@+id/textView_search_hot_ticket"
        app:layout_constraintTop_toTopOf="@+id/imageView_search_difficult_route" />

    <TextView
        android:id="@+id/textView_search_hot_ticket"
        style="@style/Theme.TicketOffice.Text3.SearchMenuText"
        android:layout_width="@dimen/search_menu_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4dp"
        android:text="@string/search_hot_ticket_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_search_weekend"
        app:layout_constraintTop_toBottomOf="@+id/imageView_search_hot_ticket" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_search_popular"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/search_popular_marginTop"
        android:background="@drawable/avia_ticket_office_border_background"
        android:padding="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_search_difficult_route">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView_search_popular_preview1"
            android:layout_width="@dimen/search_popular_preview_size"
            android:layout_height="@dimen/search_popular_preview_size"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/Theme.TicketOffice.SearchPopularPreview"
            app:srcCompat="@drawable/img_search_popular_1" />

        <TextView
            android:id="@+id/imageView_search_popular_title1"
            style="@style/Theme.TicketOffice.Text1.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:text="@string/search_popular_title_1"
            app:layout_constraintStart_toEndOf="@+id/imageView_search_popular_preview1"
            app:layout_constraintTop_toTopOf="@+id/imageView_search_popular_preview1" />

        <TextView
            android:id="@+id/imageView_search_popular_description1"
            style="@style/Theme.TicketOffice.Text3.SearchPopularDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_popular_description"
            app:layout_constraintStart_toStartOf="@+id/imageView_search_popular_title1"
            app:layout_constraintTop_toBottomOf="@+id/imageView_search_popular_title1" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:layout_marginTop="@dimen/_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_search_popular_preview1" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView_search_popular_preview2"
            android:layout_width="@dimen/search_popular_preview_size"
            android:layout_height="@dimen/search_popular_preview_size"
            android:layout_marginTop="@dimen/_16dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider2"
            app:shapeAppearanceOverlay="@style/Theme.TicketOffice.SearchPopularPreview"
            app:srcCompat="@drawable/img_search_popular_1" />

        <TextView
            android:id="@+id/imageView_search_popular_title2"
            style="@style/Theme.TicketOffice.Text1.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:text="@string/search_popular_title_1"
            app:layout_constraintStart_toEndOf="@+id/imageView_search_popular_preview2"
            app:layout_constraintTop_toTopOf="@+id/imageView_search_popular_preview2" />

        <TextView
            android:id="@+id/imageView_search_popular_description2"
            style="@style/Theme.TicketOffice.Text3.SearchPopularDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_popular_description"
            app:layout_constraintStart_toStartOf="@+id/imageView_search_popular_title2"
            app:layout_constraintTop_toBottomOf="@+id/imageView_search_popular_title2" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:layout_marginTop="@dimen/_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_search_popular_preview2" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView_search_popular_preview3"
            android:layout_width="@dimen/search_popular_preview_size"
            android:layout_height="@dimen/search_popular_preview_size"
            android:layout_marginTop="@dimen/_16dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider"
            app:shapeAppearanceOverlay="@style/Theme.TicketOffice.SearchPopularPreview"
            app:srcCompat="@drawable/img_search_popular_1" />

        <TextView
            android:id="@+id/imageView_search_popular_title3"
            style="@style/Theme.TicketOffice.Text1.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:text="@string/search_popular_title_1"
            app:layout_constraintStart_toEndOf="@+id/imageView_search_popular_preview3"
            app:layout_constraintTop_toTopOf="@+id/imageView_search_popular_preview3" />

        <TextView
            android:id="@+id/imageView_search_popular_description3"
            style="@style/Theme.TicketOffice.Text3.SearchPopularDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_popular_description"
            app:layout_constraintStart_toStartOf="@+id/imageView_search_popular_title3"
            app:layout_constraintTop_toBottomOf="@+id/imageView_search_popular_title3" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:layout_marginTop="@dimen/_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_search_popular_preview3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>